--- a/index.html
+++ b/index.html
@@ -216,7 +216,10 @@
       <section>
         <h2>Deploying code changes</h2>
           <p>To change this application, update your code and rebuild/redeploy the image.</p>
-          <p>To CUSTOM_VAR_KEY: %CUSTOM_VAR_KEY%</p>
+          <p>To CUSTOM_VAR_KEY:/p>
+            <?php
+echo '¡Mi nombre de usuario es ' . $_ENV["DATE"] . '!';
+?>
       </section>
     </section>
     <section class="col-xs-12 col-sm-6 col-md-6">
